// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup> that renders a button should add classes when props are changed 1`] = `
<ButtonGroup
  isBlock={true}
  size="large"
>
  <div
    className="ButtonGroup ButtonGroup--size_large ButtonGroup--isBlock"
  >
    <Button
      className="ButtonGroup__button"
      context="neutral"
      disabled={false}
      isBlock={false}
      key=".0"
      onClick={null}
      size="large"
      type="button"
    >
      <button
        className="ButtonGroup__button"
        context="neutral"
        disabled={false}
        onClick={null}
        size="large"
        type="button"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button"
      context="neutral"
      disabled={false}
      isBlock={false}
      key=".1"
      onClick={null}
      size="large"
      type="button"
    >
      <button
        className="ButtonGroup__button"
        context="neutral"
        disabled={false}
        onClick={null}
        size="large"
        type="button"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup> that renders a button should render default button correctly 1`] = `
<ButtonGroup
  isBlock={false}
  size="normal"
>
  <div
    className="ButtonGroup ButtonGroup--size_normal"
  >
    <Button
      className="ButtonGroup__button"
      context="neutral"
      disabled={false}
      isBlock={false}
      key=".0"
      onClick={null}
      size="normal"
      type="button"
    >
      <button
        className="ButtonGroup__button"
        context="neutral"
        disabled={false}
        onClick={null}
        size="normal"
        type="button"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button"
      context="neutral"
      disabled={false}
      isBlock={false}
      key=".1"
      onClick={null}
      size="normal"
      type="button"
    >
      <button
        className="ButtonGroup__button"
        context="neutral"
        disabled={false}
        onClick={null}
        size="normal"
        type="button"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;
